--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet/less" type="text/css" href="icons.less" />
+    <script src="https://kit.fontawesome.com/bdf9ae4b9c.js" crossorigin="anonymous"></script>
     <title>Jai's Portfolio</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" ></script>
 </head>
 <body>
+    <div class="nav-bar">
+        <nav>
+            <ul >
+                <li> <a class="" href="/">Work</a> </li>
+                <li> <a class="unselected" href="skills.html">Skills</a> </li>
+                <li> <a class="unselected" href="contact.html">Contact</a> </li>
+            </ul>
+        </nav>
+    </div>
+    <br><br><br>
     <div class="header">
         <div class="img-container">
             <img src="/Public/profile jai.svg" alt="">
@@ -24,11 +38,12 @@
     <div class="line-divider">
         <img src="./Public/curvedline.svg" alt="">
     </div>
-    <div class="menu-bar">
+    <div id="menu" class="menu-bar">
         <ul>
             <li> <a class="unselected" href="design.html">Design</a> </li>
             <li> <a href="/">Motion</a> </li>
             <li> <a class="unselected" href="music.html">Music</a> </li>
+            <li> <a class="unselected" href="https://github.com/jaytomar" target="_blank">Github</a> </li>
         </ul>
     </div>
     <div class="motion-videos">
@@ -46,7 +61,7 @@
             <div class="vid-margin embed-container" ><iframe src='https://www.youtube.com/embed/3KtcKdMw3vs' frameborder='0' allowfullscreen></iframe></div>
             <div class="vid-margin" style="padding:63.72% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/381427317" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-
+            
         </div>
         <div class="iframe-container">
             <div class="vid-margin" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/355556197" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
@@ -56,9 +71,22 @@
             <div class="vid-margin" style="padding:67.5% 0 0 0;position:relative;" ><img style="position:absolute;top:0;left:0;width:100%;height:100%;" src="/Public/circular.gif" alt=""></div>
         </div>
     </div>
-    <div>
-        <h2>like what you see ?</h1>
+    <div class="center">
+        <div id="social-test">
+            <div class="catch">
+            <p class="medium">like what you see ?</p>
+            <p class="large">Connect with me</p>
+            </div>
+            <ul class="social">
+                <li><a href="https://instagram.com/jaykaylmao"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.behance.net/jaytomar"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jaytomar/"><i class="fab fa-linkedin-in" aria-hidden="true"></a></i></li>
+                <li><a href="https://github.com/jaytomar"><i class="fa fa-github" aria-hidden="true"></a></i></li>
+                </ul>
+            <p class="credits">or mail at <a href="mailto:jaytomar26@gmail.com"> jaytomar26@gmail.com</a></p>
+        </div>
     </div>
-    </body>
-</div>
+</body>
+<script src="script.js"></script>
+
 </html>
