--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   gtag('config', 'UA-166009021-1');
 </script>
-
+    <meta property="og:image" content="./Public/design/jai-portfolio-og.png"/>
+    <meta name="description" content="Jai's portfolio showcasing all his design and motion graphics work in one place">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
