--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ clip-path: inset(2px 2px);
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/snowsurance thumbnail.mp4" autoplay loop></video>
+                    <video src="/Public/snowsurance thumbnail.mp4" autoplay loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Snowsurance TV Commercial</h2>
@@ -133,7 +133,7 @@ clip-path: inset(2px 2px);
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/logo thumbnail.mp4" autoplay loop></video>
+                    <video src="/Public/logo thumbnail.mp4" autoplay loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Logo Animation Collection!</h2>
