--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/snowsurance thumbnail.mp4" autoplay loop muted></video>
+                    <video src="/Public/snowsurance thumbnail.mp4" autoplay playsinline loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Snowsurance TV Commercial</h2>
@@ -53,7 +53,7 @@
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/logo thumbnail.mp4" autoplay loop muted></video>
+                    <video src="/Public/logo thumbnail.mp4" autoplay playsinline loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Logo Animation Collection!</h2>
