--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <link rel="stylesheet" href="styles.css">
 
-
 <body>
+<div class="main-page">
     <div class="circle hover-cursor"></div>
     <div class="click">Click!</div>
     <div class="main-section">
@@ -22,12 +22,14 @@
             <lottie-player src="Public/header mobile.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
-    <h2 class="align-center regular middle-text">Check out my work!</h2>
-    <div class="box1">
-        <div>
+    <div class="home-page">
+        <h2 class="align-center regular middle-text">Check out my work!</h2>
+        <br>
+        <a href="/snowsurance.html" class="box1">
+        <div class="box1 has-hover">
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/snowsurance thumbnail.mp4" autoplay playsinline loop muted></video>
+                    <video src="/Public/snowsurance thumbnail.mp4" autoplay loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Snowsurance TV Commercial</h2>
@@ -35,8 +37,10 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="box1">
+    </a>
+    <br>
+    <a href="/plaque.html" class="box1 has-hover">
+    <div class="box1 ">
         <div>
             <div class="flex-row">
                 <div class="video-box">
@@ -49,11 +53,13 @@
             </div>
         </div>
     </div>
-    <div class="box1">
+    </a>
+    <br>
+    <div class="box1 has-hover">
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/logo thumbnail.mp4" autoplay playsinline loop muted></video>
+                    <video src="/Public/logo thumbnail.mp4" autoplay loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Logo Animation Collection!</h2>
@@ -62,12 +68,14 @@
             </div>
         </div>
     </div>
+</div>
     <br>
     <br>
     <br>
     <br>
     <br>
 
+</div>
 </body>
 <script src="script.js"></script>
 
