--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="box1 has-hover">
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/snowsurance thumbnail.mp4" autoplay loop muted></video>
+                    <video src="/Public/snowsurance thumbnail.mp4" autoplay playsinline loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Snowsurance TV Commercial</h2>
@@ -59,7 +59,7 @@
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/logo thumbnail.mp4" autoplay loop muted></video>
+                    <video src="/Public/logo thumbnail.mp4" autoplay loop playsinline muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Logo Animation Collection!</h2>
