--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="styles.css">
 
@@ -26,25 +27,24 @@
         <h2 class="align-center regular middle-text">Check out my work!</h2>
         <br>
         <a href="/snowsurance.html" class="box1">
-        <div class="box1 has-hover">
+        <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/snowsurance thumbnail.mp4" autoplay playsinline loop muted></video>
+                    <video src="/Public/thumbnails/snowsurance thumbnail.mp4" autoplay playsinline loop muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Snowsurance TV Commercial</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident labore</p>
+                    <p>A 30 second story of the best they have to offer with design and aesthetics inpired by Apple's typography and minimal design.</p>
                 </div>
             </div>
         </div>
     </a>
-    <br>
     <a href="/plaque.html" class="box1 has-hover">
-    <div class="box1 ">
+    <div class="box1 drop-shadow">
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <img src="/Public/plaque.png" alt="">
+                    <img src="/Public/thumbnails/plaque.png" alt="">
                 </div>
                 <div class="text-box">
                     <h2>3D Plaque Award Design</h2>
@@ -54,16 +54,31 @@
         </div>
     </div>
     </a>
+    <a href="/plainsco.html" class="box1 has-hover">
+        <div class="box1 drop-shadow ">
+            <div>
+                <div class="flex-row">
+                    <div class="video-box container">
+                        <img src="/Public/thumbnails/plainsco-thumbnail.jpg" alt="" class="">
+                    </div>
+                    <div class="text-box">
+                        <h2>Logo Design - The Plains Co.</h2>
+                        <p>A clean, friendly and minimal logo for a clothing brand focusing on cleaner designs</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
     <br>
-    <div class="box1 has-hover">
+    <div class="box1 has-hover drop-shadow">
         <div>
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/logo thumbnail.mp4" autoplay loop playsinline muted></video>
+                    <video src="/Public/thumbnails/logo thumbnail.mp4" autoplay loop playsinline muted></video>
                 </div>
                 <div class="text-box">
                     <h2>Logo Animation Collection!</h2>
-                    <p>Creating a plaque award for people completing anniversaries at the company</p>
+                    <p>The best logo animations I have made so far!</p>
                 </div>
             </div>
         </div>
