--- a/plainsco.html
+++ b/plainsco.html
@@ -8,9 +8,8 @@
 </head>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
 <link rel="stylesheet" href="styles.css">
-
+<script src="https://kit.fontawesome.com/80bacdb160.js" crossorigin="anonymous"></script>
 
 <body>
     <div class="main-section">
@@ -22,36 +21,20 @@
 
     <div class="circle"></div>
     <div class="click">Click!</div>
- 
+    <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
     <div class="page">
         <br><br><br>
         <a href="/index.html" class="has-hover"><p>HOME</p></a>
         <br><br><br>
         <div>
             <div class="page">
-                <h2 class="regular title1">3D Plaque Award Design</h2>
-                <p class="text-box left-align subtitle">A 30 second story of the best they have to offer with design and aesthetics inpired by Apple's typography and minimal design.</p>
+                <h2 class="regular title1">Logo Design for The Plains Co.</h2>
+                <p class="text-box left-align subtitle">A clean, friendly and minimal logo for a clothing brand focusing on cleaner designs.</p>
             </div>
         </div>
         <br><br><br><br>
-        <div class="video-box-large ">
-                <img src="/Public/plaque.png" alt="">
-
-
-        </div>
-
         <div class="video-box-large">
-            <img src="/Public/plaque2.png" alt="">
-   
-        </div>
-        <div class="video-box-large">
-            <img src="/Public/plaque3.png" alt="">
-        </div>
-        <div class="video-box-large">
-            <img src="/Public/plaque4.jpg" alt="">
-        </div>
-        <div class="video-box-large">
-            <img src="/Public/plaque5.jpg" alt="">
+            <img src="/Public/casestudies/the-plains-co-logo-design-portfolio.jpg" alt="">
         </div>
         <br>
         <br>
