--- a/snowsurance.html
+++ b/snowsurance.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="styles.css">
 
@@ -34,7 +35,7 @@
         </div>
         <br>
         <div class="video-box-large has-hover">
-                <img src="/Public/plaque.png" alt="">
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/j8GFaWhVDcg?si=M5cMSvA00aZrkyEV"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <br>
         <h2 class="regular title2">Storyboard</h2>
