--- a/plaque.html
+++ b/plaque.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="main-section">
-        <div class="inner-section">
+        <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
