--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="home-page">
-        <h2 class="align-center regular middle-text">Check out my work!</h2>
+        <!-- <h2 class="align-center regular middle-text">Check out my work!</h2> -->
         <br>
         <a href="/snowsurance.html" class="box1">
         <div class="box1 has-hover drop-shadow">
@@ -79,6 +79,8 @@
                 <div class="text-box">
                     <h2>Logo Animation Collection!</h2>
                     <p>The best logo animations I have made so far!</p>
+                    <br><br>
+                    <p class="subtext">Motion, Branding, Sound</p>
                 </div>
             </div>
         </div>
