--- a/plaque.html
+++ b/plaque.html
@@ -8,6 +8,7 @@
 </head>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/80bacdb160.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="styles.css">
 
@@ -19,7 +20,7 @@
         </div>
     </div>
     <div class="main-page">
-
+    <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
     <div class="circle"></div>
     <div class="click">Click!</div>
  
