--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <div class="text-box">
                     <h2>Logo Animation Collection!</h2>
                     <p>The best logo animations I have made so far!</p>
-                    <br><br>
-                    <p class="subtext">Motion, Branding, Sound</p>
+                    <!-- <br><br>
+                    <p class="subtext">Motion, Branding, Sound</p> -->
                 </div>
             </div>
         </div>
