--- a/index.html
+++ b/index.html
@@ -26,15 +26,22 @@
     <div class="home-page">
         <!-- <h2 class="align-center regular middle-text">Check out my work!</h2> -->
         <br>
-        <a href="/snowsurance.html" class="box1">
+    <a href="/snowsurance.html" class="box1">
         <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
                 <div class="video-box">
                     <video src="/Public/thumbnails/snowsurance thumbnail.mp4" autoplay playsinline loop muted></video>
                 </div>
                 <div class="text-box">
-                    <h2>Snowsurance TV Commercial</h2>
-                    <p>A 30 second story of the best they have to offer with design and aesthetics inpired by Apple's typography and minimal design.</p>
+  
+                    <div>
+                        <h2>Snowsurance TV Commercial</h2>
+                        <p>A 30 second story of the best they have to offer with design and aesthetics inpired by Apple's typography and minimal design.</p>
+                        <div class="flex">
+                            <p class="work-type red">Freelance</p>
+                            <p class="work-type blue">Motion Graphics, Art Direction</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -49,6 +56,10 @@
                 <div class="text-box">
                     <h2>3D Plaque Award Design</h2>
                     <p>Creating a plaque award for people completing anniversaries at the company</p>
+                    <div class="flex">
+                        <p class="work-type red">Work</p>
+                        <p class="work-type blue">3D</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,27 +75,123 @@
                     <div class="text-box">
                         <h2>Logo Design - The Plains Co.</h2>
                         <p>A clean, friendly and minimal logo for a clothing brand focusing on cleaner designs</p>
+                        <div class="flex">
+                            <p class="work-type red">Freelance</p>
+                            <p class="work-type blue">Branding</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </a>
     <br>
-    <div class="box1 has-hover drop-shadow">
-        <div>
+    <a href="/" class="box1">
+        <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
                 <div class="video-box">
-                    <video src="/Public/thumbnails/logo thumbnail.mp4" autoplay loop playsinline muted></video>
+                    <video src="/Public/thumbnails/Stable Money thumbnail.mp4" autoplay playsinline loop muted></video>
                 </div>
                 <div class="text-box">
-                    <h2>Logo Animation Collection!</h2>
-                    <p>The best logo animations I have made so far!</p>
-                    <!-- <br><br>
-                    <p class="subtext">Motion, Branding, Sound</p> -->
+                    <div>
+                        <div class="background-box"><p>NDA</p></div>
+                    </div>
+                    <div>
+                        <h2>Stable Money Ads</h2>
+                        <p>Adding delightful motion and end-slates to complete the light-hearted and entertaining ads.</p>
+                        <div class="flex">
+                            <p class="work-type red">Freelance</p>
+                            <p class="work-type blue">Motion Graphics, CGI</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </a>
+    <br>
+    <a href="/logo-animations.html" class="box1">
+        <div class="box1 has-hover drop-shadow">
+            <div>
+                <div class="flex-row">
+                    <div class="video-box">
+                        <video src="/Public/thumbnails/logo thumbnail.mp4" autoplay loop playsinline muted></video>
+                    </div>
+                    <div class="text-box">
+                        <h2>Logo Animation Collection!</h2>
+                        <p>All the best logo animations I have made so far!</p>
+                        <div class="flex">
+                            <p class="work-type red">Personal + Work</p>
+                            <p class="work-type blue">Motion, Branding, Art Direction</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+    <br>
+    <a href="/" class="box1">
+        <div class="box1 has-hover drop-shadow">
+            <div class="flex-row">
+                <div class="video-box">
+                    <img src="/Public/thumbnails/amazon-thumbnail.png" ></img>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <div class="background-box"><p>NDA</p></div>
+                    </div>
+                    <div>
+                        <h2>Amazon Creatorverse Reel</h2>
+                        <p>Adding delightful motion and end-slates to complete the light-hearted and entertaining ads.</p>
+                        <div class="flex">
+                            <p class="work-type red">Freelance</p>
+                            <p class="work-type blue">Video Editing</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+    <br>
+    <a href="/" class="box1">
+        <div class="box1 has-hover drop-shadow">
+            <div class="flex-row">
+                <div class="video-box">
+                    <video src="/Public/thumbnails/greynade-thumbnail.mp4" autoplay loop playsinline muted></video>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <h2>Greynade - Honda Civic - Promotional Video</h2>
+                        <p>Covering a passionate project for an awesome car that looks like no other.</p>
+                        <div class="flex">
+                            <p class="work-type red">Freelance</p>
+                            <p class="work-type blue">Video Editing</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+    <a href="/" class="box1">
+        <div class="box1 has-hover drop-shadow">
+            <div class="flex-row">
+                <div class="video-box">
+                    <img src="/Public/thumbnails/suraasa-thumbnail.png" ></img>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <div class="background-box"><p>NDA</p></div>
+                    </div>
+                    <div>
+                        <h2>Suraasa Motion Design System</h2>
+                        <p>Creating a guide to use motion efficiently ensuring a consistent and cohesive brand representation across various media.</p>
+                        <div class="flex">
+                            <p class="work-type red">Work</p>
+                            <p class="work-type blue">Branding</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
 </div>
     <br>
     <br>
