--- a/plaque.html
+++ b/plaque.html
@@ -19,7 +19,7 @@
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
-    <div class="main-page">
+    <div class="main-page width-100perc">
     <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
     <div class="circle"></div>
     <div class="click">Click!</div>
