--- a/snowsurance.html
+++ b/snowsurance.html
@@ -14,7 +14,7 @@
 
 
 <body>
-    <div class="main-section">
+    <div class="main-section width-100perc">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
@@ -35,7 +35,7 @@
         </div>
         <br>
         <div class="video-box-large has-hover">
-            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/j8GFaWhVDcg?si=M5cMSvA00aZrkyEV"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/4HVo8e5Shxo?si=NWU5kV0Xw0DXGjoA"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <br>
         <h2 class="regular title2">Storyboard</h2>
