--- a/greynade.html
+++ b/greynade.html
@@ -35,14 +35,10 @@
         </div>
         <br>
         <div class="video-box-large has-hover">
-            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/4HVo8e5Shxo?si=NWU5kV0Xw0DXGjoA"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/mLrERRJ9XQY?si=j4F9HfrHEI2KDJXn"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <br>
-        <h2 class="regular title2">Storyboard</h2>
-        <br>
-        <div>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fdesign%2F7WGBVO32U8hWKwM561HYia%2FSnowsurance%3Fnode-id%3D0-1%26t%3DBzCvaUa8SAfnZ5tm-1" allowfullscreen></iframe>
-        </div>
+
     </div>
     </div>
     <br>
