--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
     </a>
     <br>
-    <a href="/" class="box1">
+    <a href="/greynade.html" class="box1">
         <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
                 <div class="video-box">
